--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
 }
 
 .logo {
-    height: 40px;
+    hurl(vscode-local:/Users/lilianarosales/Downloads/charitywater_logo_horizontal_BlackText.png)
 }
 
 .hero {
